# ml-mnist-one-shot

./: .gitignore  README.md  pyproject.toml  task.sh  train.py
.copilot/: instructions.md
datasets/: __init__.py  rmnist.py
docs/: MNIST.md  RMNIST.md  USAGE.md  origin.md  seed.md
report/: baseline_report.md  dataset_report.md  experiment_report.md  few_shot_object_detection_research.md  lenet_reproduction_report.md
src/: cli.py  main.py  oneshot.py  settings.py  train.py  visualization.py
src/datasets/: __init__.py  mnist.py  rmnist.py
src/models/: nets.py
src/pipelines/: deep_learning.py  random_choose_one.py
src/tools/: gan_augment.py
tools/: gan_augment.py  utils.py
utils/: __init__.py
