[project]
name = "ml-mnist-one-shot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "augmentor>=0.2.12",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0,<2.12.0",
    "torchvision>=0.26.0,<0.27.0",
]

[project.scripts]
oneshot = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "main", "settings", "train", "visualization"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
